err/python-project-bootstrap.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_bootstrap'...
Listing './lib/python3.5/site-packages/python_bootstrap/generator'...
Listing './lib/python3.5/site-packages/python_bootstrap/res'...
Listing './lib/python3.5/site-packages/python_bootstrap/res/templates'...
Listing './lib/python3.5/site-packages/python_bootstrap/scripts'...
Listing './lib/python3.5/site-packages/python_bootstrap/utils'...
Compiling './lib/python3.5/site-packages/python_bootstrap/utils/SystemUtils.py'...
***   File "./lib/python3.5/site-packages/python_bootstrap/utils/SystemUtils.py", line 64
    print "executable:\t" + file_location
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/python_bootstrap/utils/decorators.py'...
***   File "./lib/python3.5/site-packages/python_bootstrap/utils/decorators.py", line 11
    print "created:\t" + filename
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/python_project_bootstrap-0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './share'...
Listing './share/python-wheels'...
